# canva-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  MIGRATION_NOTES.md  NOTICE.md  README.md  index.html  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
docs/: canva-connect.md  push-private-github.md  security.md  setup.md  workflows.md
input/: brief.example.md
prompts/: canva_execution.md  content_plan.md  system.md
references/brand-voice/: README.md
rights-radar-public/payload/: part-00.txt  part-01.txt  part-02.txt  part-03.txt  part-04.txt  part-05.txt  part-06.txt  part-07.txt  part-08.txt
scripts/: bootstrap.sh  push_private.sh
src/codex_canva_agent/: __init__.py  canva_connect.py  cli.py  openai_content.py  reference_loader.py  schemas.py  settings.py  utils.py
templates/: brand_voice.md  brief.md  canva_autofill_map.example.json
tests/: test_reference_loader.py  test_schemas.py
