[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-canva-content-agent"
version = "0.1.0"
description = "Codex-first content and Canva automation agent template"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Your Team" }]
dependencies = [
  "httpx>=0.27.0",
  "openai>=1.60.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "typer>=0.12.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
codex-canva = "codex_canva_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_canva_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
